Modify results layout issue#15

--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -24,6 +24,7 @@ h2 {
   margin-bottom: 100px;
 }
 .tour .text {
-  margin-top: 20px;
+  width: 500px;
+  margin: 20px auto 0 auto;
   font-size: 12px;
 }
